[build-system]
requires = ["jupyter_packaging~=0.9.1", "jupyterlab~=3.0", "setuptools>=40.8.0", "wheel"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.options]
ensured-targets = ["nbdime/webapp/static/nbdime.js"]

[tool.jupyter-packaging.build-args]
build_cmd = "build"
source_dir = "packages"
