[bdist_wheel]
universal=1
[flake8]
max-line-length=140
ignore=E123,E265,E261,E226,E241,E221,E251s
[pep8]
max-line-length=140

[metadata]
license_file = LICENSE.md

[manifix]
known-excludes =
    .git*
    .git/**/*
    .coveragerc
    .travis.yml
    appveyor.yml
    codecov.yml
    lerna-debug.log
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    packages/**/coverage/**/*
    packages/**/lib/**/*
    packages/**/test/build/**/*
    package-lock.json
