[metadata]
name = nbdime
description = Diff and merge of Jupyter Notebooks
# long_description is set in setup.py
# long_description = file: README.md
long_description_content_type = text/markdown
url = https://nbdime.readthedocs.io
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
license = BSD
license_file = LICENSE.md
platforms =
  Linux
  Mac OS X
  Windows
classifiers =
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Framework :: Jupyter
keywords =
  Interactive
  Interpreter
  Shell
  Web
  
[options]
packages = find:
install_requires =
    nbformat
    colorama
    pygments
    tornado
    requests
    GitPython!=2.1.4,!=2.1.5,!=2.1.6  # For difftool taking git refs
    jupyter_server
    jupyter_server_mathjax>=0.2.2
    jinja2>=2.9
python_requires = >=3.6
include_package_data = True
zip_safe = False
scripts =


[options.package_data]
nbdime =  tests/files/*.*
          tests/filters/*.py
          *.schema.json
          webapp/static/*.*
          webapp/templates/*.*
          webapp/testnotebooks/*.*
          labextension/*.*
          labextension/schemas/nbdime-jupyterlab/*.*
          labextension/static/*.*
          notebook_ext/*.*

[options.entry_points]
console_scripts = 
    nbdime = nbdime.__main__:main_dispatch
    nbshow = nbdime.nbshowapp:main
    nbdiff = nbdime.nbdiffapp:main
    nbdiff-web = nbdime.webapp.nbdiffweb:main
    nbmerge = nbdime.nbmergeapp:main
    nbmerge-web = nbdime.webapp.nbmergeweb:main
    git-nbdiffdriver = nbdime.vcs.git.diffdriver:main
    git-nbdifftool = nbdime.vcs.git.difftool:main
    git-nbmergedriver = nbdime.vcs.git.mergedriver:main
    git-nbmergetool = nbdime.vcs.git.mergetool:main
    hg-nbdiff = nbdime.vcs.hg.diff:main
    hg-nbdiffweb = nbdime.vcs.hg.diffweb:main
    hg-nbmerge = nbdime.vcs.hg.merge:main
    hg-nbmergeweb = nbdime.vcs.hg.mergeweb:main
  

[options.extras_require]
test = pytest>=3.6; pytest-cov; pytest-timeout; pytest-tornado; jupyter_server[test]; jsonschema; mock; notebook; requests; tabulate
docs = sphinx; recommonmark; sphinx_rtd_theme


[bdist_wheel]
universal = False

[flake8]
max-line-length = 140
ignore = E123,E265,E261,E226,E241,E221,E251s

[pep8]
max-line-length = 140

[manifix]
known-excludes =
    .git*
    .git/**/*
    .coveragerc
    .travis.yml
    appveyor.yml
    codecov.yml
    lerna-debug.log
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    packages/**/coverage/**/*
    packages/**/lib/**/*
    packages/**/test/build/**/*
    package-lock.json
